# jupyterlite

./: .readthedocs.yml  CONTRIBUTING.md  README.md  dodo.py  package.json  pyproject.toml  tsconfig.eslint.json  upgrade_output.txt
.binder/: environment.yml
.github/actions/build-dist/: action.yml
.github/workflows/: build.yml  rtd-preview.yml  ui-tests.yml  win-dev.yml
app/: index.template.js  jupyter-lite.json  package.json
app/consoles/: package.json
app/edit/: package.json
app/lab/: package.json
app/notebooks/: package.json
app/repl/: package.json
app/tree/: package.json
docs/: changelog.md  environment.yml  migration.md  troubleshooting.md
docs/howto/: index.md
docs/howto/configure/: custom_css.md
docs/howto/pyodide/: limitations.md
docs/reference/: contents.md
py/jupyterlite/: pyproject.toml
py/jupyterlite-core/: pyproject.toml
py/jupyterlite-core/jupyterlite_core/: __init__.py  config.py  constants.py  optional.py
py/jupyterlite-core/jupyterlite_core/addons/: customcss.py  static.py
py/jupyterlite-core/jupyterlite_core/tests/: test_cli.py  test_customcss.py
py/jupyterlite/jupyterlite/: __init__.py
scripts/: copy-dist.js  watch-content.py
ui-tests/: build.py
ui-tests/test/: media.spec.ts
